# CIS520_Project4

./: CMakeLists.txt
src/: hw4-open-mp.c  hw4-pt0-thread.c
src/MPI/: proj4.c
src/OpenMP/: open_mp.c  open_mp.c~
src/Thread/: hw4-pt0-thread.c  run.sh  run.sh~  run_threads.sh  run_threads.sh~
